--- a/ferdinand.html
+++ b/ferdinand.html
@@ -65,7 +65,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			Location: "Cendana Homes",
+			Project: "Cendana Homes",
 			Subject: "Cendana Homes"
 		}; //Sets the auto-population of pre-chat form fields
 
@@ -90,8 +90,8 @@
 			"transcriptFields": ["Pre_Chat_Mobile__c"]
 		  },
 		  {
-			"label":"Location", 
-			"transcriptFields": ["Pre_Chat_Location__c"]
+			"label":"Project", 
+			"transcriptFields": ["Pre_Chat_Project__c"]
 		  },
 		  {
 			"label":"Subject", 
