--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -65,7 +65,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			Project: "Holland Village Jakarta",
+			Pre_Chat_Project__c: "Holland Village Jakarta",
 			Subject: "Holland Village Jakarta"
 		}; //Sets the auto-population of pre-chat form fields
 
