--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -62,12 +62,12 @@
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 		
-		embedded_svc.settings.prepopulatedPrechatFields = {
+		/*embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
 			Pre_Chat_Project__c: "Holland Village Jakarta",
 			Subject: "Holland Village Jakarta"
-		}; //Sets the auto-population of pre-chat form fields
+		}; //Sets the auto-population of pre-chat form fields*/
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
@@ -98,7 +98,15 @@
 			"transcriptFields": ["Pre_Chat_Subject__c"]
 		  }
 		  ];
-
+		
+		embedded_svc.settings.prepopulatedPrechatFields = {
+			//FirstName: "Ben",
+			//LastName: "Kell",
+			Pre_Chat_Project__c: "Holland Village Jakarta",
+			Subject: "Holland Village Jakarta"
+		}; //Sets the auto-population of pre-chat form fields
+		
+		
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
 			'https://dev-lippokarawaci.cs5.force.com/lippobot',
