--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -100,8 +100,8 @@
 		  ];
 		
 		embedded_svc.settings.prepopulatedPrechatFields = {
-			//FirstName: "Ben",
-			//LastName: "Kell",
+			FirstName: "Ben",
+			LastName: "Kell",
 			Pre_Chat_Project__c: "Holland Village Jakarta",
 			Subject: "Holland Village Jakarta"
 		}; //Sets the auto-population of pre-chat form fields
