--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -45,7 +45,7 @@
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
-		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+		embedded_svc.settings.language = 'en-US'; //For example, enter 'en' or 'en-US'
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
@@ -68,9 +68,6 @@
 			Pre_Chat_Project__c: "Holland Village Jakarta",
 			Subject: "Holland Village Jakarta"
 		}; //Sets the auto-population of pre-chat form fields*/
-
-		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.settings.extraPrechatFormDetails = [
 		  {
@@ -106,6 +103,8 @@
 			Subject: "Holland Village Jakarta"
 		}; //Sets the auto-population of pre-chat form fields
 		
+		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+		embedded_svc.settings.entryFeature = 'LiveAgent';
 		
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
