--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -99,7 +99,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			FirstName: "Ben",
 			LastName: "Kell",
-			Pre_Chat_Project__c: "Cendana Homes",
+			Project: "Cendana Homes",
 			Subject: "Cendana Homes"
 		}; //Sets the auto-population of pre-chat form fields
 		
