--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -99,8 +99,8 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			FirstName: "Ben",
 			LastName: "Kell",
-			Project: "Keep It Halal All the Time",
-			Subject: "Keep It Halal All the Time"
+			Project: "Holland Village Jakarta",
+			Pre_Chat_Subject__c: "Keep It Halal All the Time"
 		}; //Sets the auto-population of pre-chat form fields
 		
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
