--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -99,8 +99,8 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			FirstName: "Ben",
 			LastName: "Kell",
-			Project: "Holland Village Jakarta",
-			Subject: "Keep It Halal All the Time"
+			["Pre_Chat_Project__c"]: "Holland Village Jakarta",
+			Subject: "Subject"
 		}; //Sets the auto-population of pre-chat form fields
 		
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
