--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -99,8 +99,8 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			FirstName: "Ben",
 			LastName: "Kell",
-			["Pre_Chat_Project__c"]: "Holland Village Jakarta",
-			Subject: "Subject"
+			Pre_Chat_Project__c: "Holland Village Jakarta",
+			Pre_Chat_Subject__c: "Subject"
 		}; //Sets the auto-population of pre-chat form fields
 		
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
