--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -97,8 +97,8 @@
 		  ];
 		
 		embedded_svc.settings.prepopulatedPrechatFields = {
-			FirstName: "Ben",
-			LastName: "Kell",
+			FirstName: "Tyrone",
+			LastName: "Jamal",
 			Project: "Holland Village Jakarta",
 			Subject: "Subject"
 		}; //Sets the auto-population of pre-chat form fields
