--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -100,7 +100,7 @@
 			FirstName: "Tyrone",
 			LastName: "Jamal",
 			Project: "Holland Village Jakarta",
-			"Pre_Chat_Subject__c": "Subject"
+			Pre_Chat_Subject__c: "Subject"
 		}; //Sets the auto-population of pre-chat form fields
 		
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
