--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -88,7 +88,8 @@
 		  },
 		  {
 			"label":"Project", 
-			"transcriptFields": ["Pre_Chat_Project__c"]
+			"transcriptFields": ["Pre_Chat_Project__c"],
+			"value": "Holland Village Jakarta"
 		  },
 		  {
 			"label":"Subject", 
@@ -100,7 +101,7 @@
 			FirstName: "Tyrone",
 			LastName: "Jamal",
 			Project: "Holland Village Jakarta",
-			Pre_Chat_Subject__c: "Subject"
+			Subject: "Subject"
 		}; //Sets the auto-population of pre-chat form fields
 		
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
