--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -112,7 +112,7 @@
 				deploymentId: '572O00000004CbR',
 				buttonId: '573O0000000Cb4j',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IO00000008ORqMAM_178e3e2f795',
+				eswLiveAgentDevName: 'Chat_Agents',
 				isOfflineSupportEnabled: false
 			}
 		);
