--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -45,7 +45,7 @@
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
-		embedded_svc.settings.language = 'en-US'; //For example, enter 'en' or 'en-US'
+		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
@@ -61,68 +61,27 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-		
-		/*embedded_svc.settings.prepopulatedPrechatFields = {
-			//FirstName: "Ben",
-			//LastName: "Kell",
-			Pre_Chat_Project__c: "Holland Village Jakarta",
-			Subject: "Holland Village Jakarta"
-		}; //Sets the auto-population of pre-chat form fields*/
 
-		embedded_svc.settings.extraPrechatFormDetails = [
-		  {
-			"label":"First Name", 
-			"transcriptFields": ["Pre_Chat_First_Name__c"]
-		  },
-		  {
-			"label":"Last Name", 
-			"transcriptFields": ["Pre_Chat_Last_Name__c"]
-		  },
-		  {
-			"label":"Email", 
-			"transcriptFields": ["Pre_Chat_Email__c"]
-		  },
-		  {
-			"label":"Mobile", 
-			"transcriptFields": ["Pre_Chat_Mobile__c"]
-		  },
-		  {
-			"label":"Project", 
-			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": "Holland Village Jakarta"
-		  },
-		  {
-			"label":"Subject", 
-			"transcriptFields": ["Pre_Chat_Subject__c"]
-		  }
-		  ];
-		
-		embedded_svc.settings.prepopulatedPrechatFields = {
-			FirstName: "Tyrone",
-			LastName: "Jamal",
-			Project: "Holland Village Jakarta",
-			Subject: "Subject"
-		}; //Sets the auto-population of pre-chat form fields
-		
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
-		
+
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
 			'https://dev-lippokarawaci.cs5.force.com/lippobot',
 			gslbBaseURL,
 			'00DO00000056VEc',
-			'Chat_Agents',
+			'Chat_General',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ukb.salesforceliveagent.com/content',
 				deploymentId: '572O00000004CbR',
-				buttonId: '573O00000004CkY',
+				buttonId: '573O0000000Cb4j',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Chat_Agents',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IO00000008ORqMAM_178e3e2f795',
 				isOfflineSupportEnabled: false
 			}
 		);
 	};
+
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
