--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -16,7 +16,7 @@
 	</style>
 	<div class="base">
 	<div class="topPage">
-	<h1><center>Lippo Live Chat</center></h1>
+	<h1><center>Lippo Live Chat - Cendana Homes</center></h1>
 	<div>
 	</div>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -61,27 +61,61 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+		
+		embedded_svc.settings.prepopulatedPrechatFields = {
+			//FirstName: "Ben",
+			//LastName: "Kell",
+			//Project: "Millenium Village",
+			//Subject: "Millenium Village"
+		}; //Sets the auto-population of pre-chat form fields
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
+
+		embedded_svc.settings.extraPrechatFormDetails = [
+		  {
+			"label":"First Name", 
+			"transcriptFields": ["Pre_Chat_First_Name__c"]
+		  },
+		  {
+			"label":"Last Name", 
+			"transcriptFields": ["Pre_Chat_Last_Name__c"]
+		  },
+		  {
+			"label":"Email", 
+			"transcriptFields": ["Pre_Chat_Email__c"]
+		  },
+		  {
+			"label":"Mobile", 
+			"transcriptFields": ["Pre_Chat_Mobile__c"]
+		  },
+		  {
+			"label":"Project", 
+			"transcriptFields": ["Pre_Chat_Project__c"],
+			"value": 'Holland Village Jakarta'
+		  },
+		  {
+			"label":"Subject", 
+			"transcriptFields": ["Pre_Chat_Subject__c"]
+		  }
+		  ];
 
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
 			'https://dev-lippokarawaci.cs5.force.com/lippobot',
 			gslbBaseURL,
 			'00DO00000056VEc',
-			'Chat_General',
+			'Chat_Agents',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ukb.salesforceliveagent.com/content',
 				deploymentId: '572O00000004CbR',
-				buttonId: '573O0000000Cb4j',
+				buttonId: '573O00000004CkY',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IO00000008ORqMAM_178e3e2f795',
+				eswLiveAgentDevName: 'Chat_Agents',
 				isOfflineSupportEnabled: false
 			}
 		);
 	};
-
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
