--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -103,7 +103,7 @@
 				deploymentId: '572O00000004CbR',
 				buttonId: '573O0000000Cb4j',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Chat_Agents',
+				eswLiveAgentDevName: 'Chat_General',
 				isOfflineSupportEnabled: false
 			}
 		);
