--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -14,30 +14,38 @@
 			background-color: cyan;
 		}
 	</style>
-	
 	<div class="base">
 	<div class="topPage">
-	<h1><center>Lippo Live Chat</center></h1>
+	<h1><center>Lippo Live Chat - Cendana Homes</center></h1>
 	<div>
 	</div>
-		
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-	
 	<style type='text/css'>
-		.embeddedServiceHelpButton .helpButton .uiButton {
-			background-color: #005290;
-			font-family: "Arial", sans-serif;
-		}
-		.embeddedServiceHelpButton .helpButton .uiButton:focus {
-			outline: 1px solid #005290;
-		}
-	</style>
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #005290;
+		font-family: "Arial", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #005290;
+	}
+</style>
+
+
+<style type='text/css'>
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #005290;
+		font-family: "Arial", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #005290;
+	}
+</style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
-		embedded_svc.settings.language = 'en-US'; //For example, enter 'en' or 'en-US'
+		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
@@ -53,6 +61,16 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+		
+		embedded_svc.settings.prepopulatedPrechatFields = {
+			//FirstName: "Ben",
+			//LastName: "Kell",
+			//Project: "Millenium Village",
+			//Subject: "Millenium Village"
+		}; //Sets the auto-population of pre-chat form fields
+
+		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.settings.extraPrechatFormDetails = [
 		  {
@@ -71,39 +89,29 @@
 			"label":"Mobile", 
 			"transcriptFields": ["Pre_Chat_Mobile__c"]
 		  },
-		  /*{
-			"label":"Project", 
+		  {
+			//"label":"Project", 
 			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": "Holland Village Jakarta"
-		  },*/
+			"value": 'Holland Village Jakarta'
+		  },
 		  {
 			"label":"Subject", 
 			"transcriptFields": ["Pre_Chat_Subject__c"]
 		  }
 		  ];
-		
-		embedded_svc.settings.prepopulatedPrechatFields = {
-			//FirstName: "Tyrone",
-			//LastName: "Jamal",
-			Project: "Holland Village Jakarta",
-			Subject: "Subject"
-		}; //Sets the auto-population of pre-chat form fields
-		
-		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-		embedded_svc.settings.entryFeature = 'LiveAgent';
-		
+
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
 			'https://dev-lippokarawaci.cs5.force.com/lippobot',
 			gslbBaseURL,
 			'00DO00000056VEc',
-			'Chat_General',
+			'Chat_Agents',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ukb.salesforceliveagent.com/content',
 				deploymentId: '572O00000004CbR',
-				buttonId: '573O0000000Cb4j',
+				buttonId: '573O00000004CkY',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Chat_General',
+				eswLiveAgentDevName: 'Chat_Agents',
 				isOfflineSupportEnabled: false
 			}
 		);
