--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -90,7 +90,7 @@
 			"transcriptFields": ["Pre_Chat_Mobile__c"]
 		  },
 		  {
-			//"label":"Project", 
+			"label":"Project", 
 			"transcriptFields": ["Pre_Chat_Project__c"],
 			"value": 'Holland Village Jakarta'
 		  },
