--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -92,7 +92,7 @@
 		  {
 			"label":"Project", 
 			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": "Holland Village Jakarta"
+			"value": 'Holland Village Jakarta'
 		  },
 		  {
 			"label":"Subject", 
