--- a/cendana_homes.html
+++ b/cendana_homes.html
@@ -91,7 +91,8 @@
 		  },
 		  {
 			"label":"Project", 
-			"transcriptFields": ["Pre_Chat_Project__c"]
+			"transcriptFields": ["Pre_Chat_Project__c"],
+			"value": "Cendana Homes"
 		  },
 		  {
 			"label":"Subject", 
