--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -105,13 +105,13 @@
 			'https://dev-lippokarawaci.cs5.force.com/lippobot',
 			gslbBaseURL,
 			'00DO00000056VEc',
-			'Chat_Agents',
+			'Chat_General',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ukb.salesforceliveagent.com/content',
 				deploymentId: '572O00000004CbR',
-				buttonId: '573O00000004CkY',
+				buttonId: '573O0000000Cb4j',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Chat_Agents',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IO00000008ORqMAM_178e3e2f795',
 				isOfflineSupportEnabled: false
 			}
 		);
