--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -65,7 +65,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			//Project: "Millenium Village",
+			Pre_Chat_Project__c" = "Holland Village Jakarta"
 			//Subject: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
 
@@ -89,11 +89,11 @@
 			"label":"Mobile", 
 			"transcriptFields": ["Pre_Chat_Mobile__c"]
 		  },
-		  {
+		  //{
 			//"label":"Project", 
-			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": 'Holland Village Jakarta'
-		  },
+			//"transcriptFields": ["Pre_Chat_Project__c"],
+			//"value": 'Holland Village Jakarta'
+		  //},
 		  {
 			"label":"Subject", 
 			"transcriptFields": ["Pre_Chat_Subject__c"]
