--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -16,7 +16,7 @@
 	</style>
 	<div class="base">
 	<div class="topPage">
-	<h1><center>Lippo Live Chat - Cendana Homes</center></h1>
+	<h1><center>Lippo Live Chat</center></h1>
 	<div>
 	</div>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -111,7 +111,7 @@
 				deploymentId: '572O00000004CbR',
 				buttonId: '573O0000000Cb4j',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IO00000008ORqMAM_178e3e2f795',
+				eswLiveAgentDevName: 'Chat_General',
 				isOfflineSupportEnabled: false
 			}
 		);
