--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -65,7 +65,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			Pre_Chat_Project__c" = "Holland Village Jakarta"
+			Pre_Chat_Project__c" = 'Holland Village Jakarta'
 			//Subject: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
 
