--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -92,7 +92,8 @@
 		  {
 			"label":"Project", 
 			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": 'Holland Village Jakarta'
+			"value": 'Holland Village Jakarta',
+			"displayToAgent": false
 		  },
 		  {
 			"label":"Subject", 
