--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -61,13 +61,7 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-		
-		embedded_svc.settings.prepopulatedPrechatFields = {
-			//FirstName: "Ben",
-			//LastName: "Kell",
-			//Pre_Chat_Project__c = 'Holland Village Jakarta'
-			//Subject: "Millenium Village"
-		}; //Sets the auto-population of pre-chat form fields
+	 
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
@@ -99,6 +93,13 @@
 			"transcriptFields": ["Pre_Chat_Subject__c"]
 		  }
 		  ];
+		
+		embedded_svc.settings.prepopulatedPrechatFields = {
+			//FirstName: "Ben",
+			//LastName: "Kell",
+			Pre_Chat_Project__c = 'Holland Village Jakarta'
+			//Subject: "Millenium Village"
+		}; //Sets the auto-population of pre-chat form fields
 
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
