--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -86,7 +86,7 @@
 		  /*{
 			"label":"Project", 
 			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": "Holland Village Jakarta"
+			"value": "Holland Village Jakartas"
 		  },*/
 		  {
 			"label":"Subject", 
