--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -97,7 +97,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			//Project = 'Holland Village Jakarta' 
+			["Pre_Chat_Mobile__c"] = "Holland Village Jakarta" 
 			//Subject: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
 
