--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -95,10 +95,10 @@
 		  ];
 		
 		embedded_svc.settings.prepopulatedPrechatFields = {
-			//FirstName: "Ben",
-			//LastName: "Kell",
-			["Pre_Chat_Mobile__c"] : "Holland Village Jakarta" 
-			//Subject: "Millenium Village"
+			FirstName: "Ben",
+			LastName: "Kell",
+			P_Project__c : "Holland Village Jakarta",
+			Pre_Chat_Subject__c: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
 
 		embedded_svc.init(
