--- a/chat_general_page.html
+++ b/chat_general_page.html
@@ -97,7 +97,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			FirstName: "Ben",
 			LastName: "Kell",
-			P_Project__c : "Holland Village Jakarta",
+			Pre_Chat_Project__c: "Holland Village Jakarta",
 			Pre_Chat_Subject__c: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
 
