--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -16,7 +16,7 @@
 	</style>
 	<div class="base">
 	<div class="topPage">
-	<h1><center>Lippo Live Chat - Cendana Homes</center></h1>
+	<h1><center>Lippo Live Chat - Holland Vilage JKT</center></h1>
 	<div>
 	</div>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
