--- a/holland_village_jakarta.html
+++ b/holland_village_jakarta.html
@@ -61,13 +61,6 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-		
-		embedded_svc.settings.prepopulatedPrechatFields = {
-			//FirstName: "Ben",
-			//LastName: "Kell",
-			//Project: "Millenium Village",
-			//Subject: "Millenium Village"
-		}; //Sets the auto-population of pre-chat form fields
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
@@ -101,6 +94,13 @@
 		  }
 		  ];
 
+		embedded_svc.settings.prepopulatedPrechatFields = {
+			//FirstName: "Ben",
+			//LastName: "Kell",
+			Pre_Chat_Project__c: "Holland Village Jakarta",
+			//Subject: "Millenium Village"
+		}; //Sets the auto-population of pre-chat form fields
+		
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
 			'https://dev-lippokarawaci.cs5.force.com/lippobot',
