--- a/st_moritz.html
+++ b/st_moritz.html
@@ -16,7 +16,7 @@
 	</style>
 	<div class="base">
 	<div class="topPage">
-	<h1><center>Lippo Live Chat - Cendana Homes</center></h1>
+	<h1><center>Lippo Live Chat - St Moritz</center></h1>
 	<div>
 	</div>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -65,8 +65,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			Project: "St. Moritz",
-			Subject: "St. Moritz"
+			Pre_Chat_Project__c: "St. Moritz"
 		}; //Sets the auto-population of pre-chat form fields
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
