--- a/cendana_homes.html
+++ b/cendana_homes.html
@@ -85,7 +85,7 @@
 		  {
 			"label":"Project", 
 			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": "Cendana Homes"
+			"value": 'Cendana Homes'
 		  },
 		  {
 			"label":"Subject", 
