--- a/holland_village_manado.html
+++ b/holland_village_manado.html
@@ -16,7 +16,7 @@
 	</style>
 	<div class="base">
 	<div class="topPage">
-	<h1><center>Lippo Live Chat - Cendana Homes</center></h1>
+	<h1><center>Lippo Live Chat - Holland Village Manado</center></h1>
 	<div>
 	</div>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -61,13 +61,6 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-		
-		embedded_svc.settings.prepopulatedPrechatFields = {
-			//FirstName: "Ben",
-			//LastName: "Kell",
-			Project: "Holland Village Manado",
-			Subject: "Holland Village Manado"
-		}; //Sets the auto-population of pre-chat form fields
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
@@ -91,13 +84,21 @@
 		  },
 		  {
 			"label":"Project", 
-			"transcriptFields": ["Pre_Chat_Project__c"]
+			"transcriptFields": ["Pre_Chat_Project__c"],
+			"value": 'Holland Village Manado'
 		  },
 		  {
 			"label":"Subject", 
 			"transcriptFields": ["Pre_Chat_Subject__c"]
 		  }
 		  ];
+		
+		embedded_svc.settings.prepopulatedPrechatFields = {
+			//FirstName: "Ben",
+			//LastName: "Kell",
+			Pre_Chat_Project__c: "Holland Village Manado",
+			//Subject: "Holland Village Manado"
+		}; //Sets the auto-population of pre-chat form fields
 
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
