--- a/holland_village_manado.html
+++ b/holland_village_manado.html
@@ -96,7 +96,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			Pre_Chat_Project__c: "Holland Village Manado",
+			Pre_Chat_Project__c: "Holland Village Manado"
 			//Subject: "Holland Village Manado"
 		}; //Sets the auto-population of pre-chat form fields
 
