--- a/cendana_homes.html
+++ b/cendana_homes.html
@@ -96,7 +96,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			Pre_Chat_Project__c: "Cendana Homes",
+			Pre_Chat_Project__c: "Cendana Homes"
 			//Subject: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
 
