--- a/cendana_homes.html
+++ b/cendana_homes.html
@@ -88,6 +88,10 @@
 			"value": 'Cendana Homes'
 		  },
 		  {
+			"label":"Cluster, 
+			"transcriptFields": ["Pre_Chat_Cluster__c"]
+		  },
+		  {
 			"label":"Subject", 
 			"transcriptFields": ["Pre_Chat_Subject__c"]
 		  }
