--- a/cendana_homes.html
+++ b/cendana_homes.html
@@ -1,3 +1,36 @@
+
+Skip to content
+Pull requests
+Issues
+Marketplace
+Explore
+@evansitumorang
+evansitumorang /
+Spoon-Knife
+forked from octocat/Spoon-Knife
+
+0
+0
+
+    118k
+
+Code
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+
+    Settings
+
+Spoon-Knife/holland_village_jakarta.html
+@evansitumorang
+evansitumorang Update holland_village_jakarta.html
+Latest commit 593ad60 on Apr 20
+History
+1 contributor
+135 lines (122 sloc) 3.91 KB
 <html>
 <head>
 </head>
@@ -7,7 +40,7 @@
 			background-color: black;
 		}
 		body {
-			background-color: #CCCCCC;
+			background-color: #CCCCCC; 
 			margin: 0px;
 		}
 		.topPage {
@@ -16,7 +49,7 @@
 	</style>
 	<div class="base">
 	<div class="topPage">
-	<h1><center>Lippo Live Chat - Cendana Homes</center></h1>
+	<h1><center>Lippo Live Chat - Holland Vilage JKT</center></h1>
 	<div>
 	</div>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -84,22 +117,21 @@
 		  },
 		  {
 			"label":"Project", 
-			"transcriptFields": ["Pre_Chat_Project__c"],
-			"value": 'Cendana Homes'
+			"transcriptFields": ["Pre_Chat_Project__c"]
 		  },
 		  {
 			"label":"Subject", 
 			"transcriptFields": ["Pre_Chat_Subject__c"]
 		  }
 		  ];
-		
+
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			Pre_Chat_Project__c: "Cendana Homes"
+			//Pre_Chat_Project__c: "Holland Village Jakarta",
 			//Subject: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
-
+		
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2--dev.my.salesforce.com',
 			'https://dev-lippokarawaci.cs5.force.com/lippobot',
@@ -132,3 +164,18 @@
 </body>
 
 </html>
+
+    © 2021 GitHub, Inc.
+    Terms
+    Privacy
+    Security
+    Status
+    Docs
+
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
+
