--- a/cendana_homes.html
+++ b/cendana_homes.html
@@ -1,36 +1,4 @@
 
-Skip to content
-Pull requests
-Issues
-Marketplace
-Explore
-@evansitumorang
-evansitumorang /
-Spoon-Knife
-forked from octocat/Spoon-Knife
-
-0
-0
-
-    118k
-
-Code
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-
-    Settings
-
-Spoon-Knife/holland_village_jakarta.html
-@evansitumorang
-evansitumorang Update holland_village_jakarta.html
-Latest commit 593ad60 on Apr 20
-History
-1 contributor
-135 lines (122 sloc) 3.91 KB
 <html>
 <head>
 </head>
@@ -120,6 +88,10 @@ History
 			"transcriptFields": ["Pre_Chat_Project__c"]
 		  },
 		  {
+			"label":"Cluster", 
+			"transcriptFields": ["Pre_Chat_Cluster__c"]
+		  },
+		  {
 			"label":"Subject", 
 			"transcriptFields": ["Pre_Chat_Subject__c"]
 		  }
@@ -164,18 +136,3 @@ History
 </body>
 
 </html>
-
-    © 2021 GitHub, Inc.
-    Terms
-    Privacy
-    Security
-    Status
-    Docs
-
-    Contact GitHub
-    Pricing
-    API
-    Training
-    Blog
-    About
-
