--- a/cendana_homes.html
+++ b/cendana_homes.html
@@ -85,7 +85,8 @@
 		  },
 		  {
 			"label":"Project", 
-			"transcriptFields": ["Pre_Chat_Project__c"]
+			"transcriptFields": ["Pre_Chat_Project__c"],
+			"value": 'Cendana Homes'
 		  },
 		  {
 			"label":"Cluster", 
@@ -100,7 +101,7 @@
 		embedded_svc.settings.prepopulatedPrechatFields = {
 			//FirstName: "Ben",
 			//LastName: "Kell",
-			//Pre_Chat_Project__c: "Holland Village Jakarta",
+			Pre_Chat_Project__c: "Cendana Homes"
 			//Subject: "Millenium Village"
 		}; //Sets the auto-population of pre-chat form fields
 		
