--- a/Test-Production/prod_holland_village_manado.html
+++ b/Test-Production/prod_holland_village_manado.html
@@ -88,7 +88,14 @@
 			"transcriptFields": ["Pre_Chat_Subject__c"] 
 		  }
 		  ];
-
+		
+		embedded_svc.settings.prepopulatedPrechatFields = {
+			FirstName: "Ben",
+			LastName: "Kell",
+			//Pre_Chat_Project__c: "Holland Village Jakarta",
+			Pre_Chat_Subject__c: "Inquiry"
+		}; //Sets the auto-population of pre-chat form fields
+		
 		embedded_svc.init(
 			'https://ptlippokarawacitbk2.my.salesforce.com',
 			'https://lippokarawaci.secure.force.com/liveAgentSetupFlow',
