--- a/Test-Production-030621/prod_cendana_icon.html
+++ b/Test-Production-030621/prod_cendana_icon.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-
+	
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
 <style type='text/css'>
@@ -68,11 +68,11 @@
 			'https://lippokarawaci.secure.force.com/liveAgentSetupFlow',
 			gslbBaseURL,
 			'00D5g000001EBcX',
-			'Chat_Cendana_Homes',
+			'Chat_Cendana_Icon',
 			{
 				baseLiveAgentContentURL: 'https://c.la2-c1-ukb.salesforceliveagent.com/content',
 				deploymentId: '5725g000000PRcl',
-				buttonId: '5735g000000PUPl',
+				buttonId: '5735g000000Pb7g',
 				baseLiveAgentURL: 'https://d.la2-c1-ukb.salesforceliveagent.com/chat',
 				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I5g000000GzUbEAK_178e85506b0',
 				isOfflineSupportEnabled: false
